# QTF

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  artifacts  data  environment.yaml  logs  pyproject.toml  sample_data.csv
configs/: base.yaml  research.yaml
configs/backtests/: sma_crossover.yaml
plan/: PLAN.md  PROGRESS.md
scripts/: make_tearsheet.py  run_backtest.py
src/QTF.egg-info/: PKG-INFO  SOURCES.txt
src/qt/: enums.py  events.py  types.py
src/qt/backtest/: costs.py  data_handler.py  engine.py  event_queue.py  execution_sim.py  metrics.py  portfolio.py  slippage.py
src/qt/config/: settings.py
src/qt/data/: schema.py
src/qt/data/storage/: base.py  duckdb.py  parquet.py  postgres.py
src/qt/evaluation/: performance.py  tearsheet.py
src/qt/features/: engineering.py
src/qt/features/labeling/: triple_barrier.py
src/qt/features/signals/: mean_reversion.py  microstructure.py  momentum.py
src/qt/live/: data_streams.py  exec_engine.py  order_router.py  risk_guard.py  state_store.py
src/qt/live/adapters/: base.py
src/qt/portfolio/: allocators.py  constraints.py  optimizers.py  rebalancing.py  risk_models.py
src/qt/reporting/: reporters.py
src/qt/risk/: limits.py  models.py  sizing.py  stress.py
src/qt/strategies/: base.py  registry.py  sma_crossover.py
src/qt/utils/: logger.py  logging.py  math.py  time.py
test_write/: hello.txt
tests/backtest/: test_backtest.py  test_data_handler.py  test_execution_sim.py  test_portfolio.py
