[project]
name = "QTF"
version = "0.1.0"
description = "A Quantitative Trading Framework"
requires-python = ">=3.13"
authors = [{ name = "Samuel Ahou", email = "samuelahou@hotmail.com" },
           { name = "Qumars Sharifi", email = "dev@qtf.invalid"}]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"